# security-engineering-academy

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
.claude/: launch.json
data/fixtures/: users.json
data/mock_responses/: github_repos.json  github_user.json  openai_summary.json  stripe_customer.json  weather.json
docs/: capstone.md  curriculum.md  setup.md
exercises/: debugging_lab.py  interview_simulations.md
fde_api_academy/: __init__.py  cli.py  curriculum.py  http_client.py  mentor.py  models.py  progress.py  validators.py
fde_api_academy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fde_api_academy/content/: curriculum.json
fde_api_academy/mock_api/: client.py
fde_api_academy/projects/: __init__.py  api_operations_dashboard.py
fde_api_academy/student/: drill_m01_drill_1.py  drill_m01_drill_2.py  drill_m01_drill_3.py  drill_m01_drill_4.py  drill_m02_drill_1.py  drill_m02_drill_2.py  drill_m02_drill_3.py  drill_m03_drill_1.py  drill_m03_drill_2.py  drill_m03_drill_3.py  drill_m04_drill_1.py  drill_m04_drill_2.py  drill_m04_drill_3.py  drill_m05_drill_1.py  drill_m05_drill_2.py  drill_m05_drill_3.py  drill_m05_drill_4.py  drill_m05_drill_5.py  drill_m06_drill_1.py  drill_m06_drill_2.py  drill_m06_drill_3.py  drill_m07_drill_1.py  drill_m07_drill_2.py  drill_m07_drill_3.py  (+40 more)
scripts/: build-security-site.mjs  build_drills.py
tests/: test_capstone.py  test_curriculum.py  test_mock_api.py  test_progress.py  test_security_course.py  test_validators.py  test_web_server.py
(+22 files in other folders)
